mejoras recomendadas, constantes, crear nuevo modulo de jwt y sacarlo del driven